# NEPLg1

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  note.md  plan.md  plan2.md
doc/: doc_plan.txt  starting_detail.md  typing_detail.md
nepl-cli/: Cargo.toml
nepl-cli/src/: main.rs
nepl-cli/tests/: deploy_script.rs
nepl-core/: Cargo.toml
nepl-core/src/: ast.rs  builtins.rs  codegen_llvm.rs  codegen_wasm.rs  compiler.rs  error.rs  hir.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  type.rs  typecheck.rs
nepl-web-playground/: Cargo.toml
stdlib/: bit.nepl  convert.nepl  logic.nepl  math.nepl  std.nepl
stdlib/platform/: wasi.nepl  wasm_core.nepl
