[workspace]
members = ["nepl-core", "nepl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0"
wasm-encoder = "0.241"
walkdir = "2.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
wasmi = "0.51"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
